# cdss-clinical-pathway

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
configs/: __init__.py
configs/pathways/: __init__.py
configs/prompts/: __init__.py  diagnosis.yaml
configs/prompts/diagnosis/: CAP-system-prompt.yaml  agent-assessment-v1.yaml  diagnosis.yaml  knowledge-search-v1.yaml  recommendation.yaml
data/: __init__.py
data/raw/: __init__.py  cap-knowledge.md
scripts/: ingest_knowledge.py  init_db.py  test_db.py  test_embedder.py  test_retrieval.py
scripts/postgres-init/: 01-init.sql
src/cdss/: __init__.py  main.py
src/cdss/api/: __init__.py  agent.py  chat.py  diagnose.py  score.py  search.py
src/cdss/core/: __init__.py  config.py  logging.py
src/cdss/db/: __init__.py  base.py  init.py  session.py
src/cdss/knowledge/: __init__.py
src/cdss/llm/: __init__.py  client.py  prompts.py  schemas.py  structured.py  tool_use.py
src/cdss/models/: __init__.py  diagnosis.py  knowledge.py
src/cdss/rag/: __init__.py  chunker.py  embedder.py  ingestion.py  repository.py  retriever.py
src/cdss/rules/: __init__.py
src/cdss/rules/scoring/: __init__.py  curb65.py
src/cdss/rules/treatment/: cap_antibiotic.py
src/cdss/tools/: __init__.py  base.py  clinical_scoring.py  clinical_treatment.py  knowledge_search.py  registry.py
tests/: __init__.py
tests/rules/scoring/: test_curb65.py
tests/rules/treatment/: test_cap_antibiotic.py
