[project]
name = "cdss-clinical-pathway"
version = "0.1.0"
description = "A learning project: Clinical Decision Support System with Agent-based clinical pathway navigation"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Zheng Tianlun", email = "tianlunnn@gmail.com" }
]
license = { text = "MIT" }
keywords = ["cdss", "llm", "agent", "rag", "clinical-pathway", "healthcare-ai"]
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "openai>=2.41.0",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "sqlalchemy[asyncio]>=2.0.50",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cdss"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import排序)
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"] 
